--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,28 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <ion-header [translucent]="true">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title>
+        Bienvenido
+      </ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+  <ion-content class="cuerpo">
+    <ion-grid>
+      <!-- row -->
+      <ion-row class="imagen-principal">
+        <ion-col class="ion-padding-top">
+          <img src="https://via.placeholder.com/500" alt="">
+        </ion-col>
+      </ion-row>
+      <!-- fin row -->
+
+      <ion-row>
+        <ion-col>
+          <h1 class="ion-text-center">Bienvenid@</h1>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
+
+
+
