--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,28 +1,31 @@
-  <ion-header [translucent]="true">
-    <ion-toolbar>
-      <ion-title>
-        Bienvenido
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title>
+      Bienvenido
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
 
-  <ion-content class="cuerpo">
-    <ion-grid>
-      <!-- row -->
-      <ion-row class="imagen-principal">
-        <ion-col class="ion-padding-top">
-          <img src="https://via.placeholder.com/500" alt="">
-        </ion-col>
-      </ion-row>
-      <!-- fin row -->
+<ion-content class="background-image">
+  <ion-grid>
+    <!-- row -->
+    <ion-row class="imagen-principal">
+      <ion-col class="ion-padding-top">
+        <img class="ion-padding" src="https://via.placeholder.com/400" alt="">
+      </ion-col>
+    </ion-row>
+    <!-- fin row -->
 
-      <ion-row>
-        <ion-col>
-          <h1 class="ion-text-center">Bienvenid@</h1>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ion-content>
+    <ion-row>
+      <ion-col class="ion-text-center">
+        <h1>Bienvenid@</h1>
+        <p>¡Bienvenido a nuestra app de comidas! Aquí podrás descubrir deliciosas opciones de diferentes países para
+          satisfacer tus antojos culinarios. ¡Buen provecho!</p>
 
+        <ion-button shape="round">Iniciar</ion-button>
+        <p>Desarrollo de Apps Móviles - 2023</p>
 
-
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
