--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,5 @@
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
@@ -16,9 +15,7 @@
 #container p {
   font-size: 16px;
   line-height: 22px;
-
   color: #8c8c8c;
-
   margin: 0;
 }
 
@@ -28,5 +25,12 @@
 
 
 .background-image{
-  --background: url(https://via.placeholder.com/720x1280) 0 0/100% 100% no-repeat;
+  --background: url(../../assets/img/fondo_inicio.jpg) 0 0/100% 100% no-repeat;
+}
+
+img.cheems-huaso{
+  width: 60% !important;
+  width: auto;
+  margin: auto;
+  display: block;
 }
