--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,5 +1,6 @@
 #container {
   text-align: center;
+
   position: absolute;
   left: 0;
   right: 0;
@@ -15,7 +16,9 @@
 #container p {
   font-size: 16px;
   line-height: 22px;
+
   color: #8c8c8c;
+
   margin: 0;
 }
 
@@ -25,12 +28,5 @@
 
 
 .background-image{
-  --background: url(../../assets/img/fondo_inicio.jpg) 0 0/100% 100% no-repeat;
-}
-
-img.cheems-huaso{
-  width: 60% !important;
-  width: auto;
-  margin: auto;
-  display: block;
+  --background: url(https://via.placeholder.com/720x1280) 0 0/100% 100% no-repeat;
 }
