--- a/src/app/seleccionar/seleccionar.page.html
+++ b/src/app/seleccionar/seleccionar.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="ion-text-center">
+<ion-content [fullscreen]="true" class="ion-text-center background-image">
   <ion-header collapse="condense">
     <ion-toolbar>
       <!-- <ion-title size="large">seleccionar</ion-title> -->
@@ -12,14 +12,15 @@
   </ion-header>
 
   <img class="user-cheems" src="../../assets/img/user-cheems.png" alt="">
-  <h2 >Seleccionar</h2>
-  <p>¿Te apetece probar algo delicioso? Descubre nuestros platos en la aplicación y elige tu favorito para disfrutar en casa. ¡Buen provecho!</p>
+  <h2 class="tx-azul tx700">Seleccionar</h2>
+  <p class="tx-cafe tx500">¿Te apetece probar algo delicioso? Descubre nuestros platos en la aplicación y elige tu favorito para disfrutar en casa. ¡Buen provecho!</p>
 
-  <img class="secciones" src="https://via.placeholder.com/600x250" alt="">
-  <img class="secciones" src="https://via.placeholder.com/600x250" alt="">
-  <img class="secciones" src="https://via.placeholder.com/600x250" alt="">
-  <img class="secciones" src="https://via.placeholder.com/600x250" alt="">
-  <img class="secciones" src="https://via.placeholder.com/600x250" alt="">
+  <img class="secciones" src="../../assets/img/por-pais.png" alt="">
+  <img class="secciones" src="../../assets/img/por-tipo.png" alt="">
+  <img class="secciones" src="../../assets/img/postres.png" alt="">
+  <img class="secciones" src="../../assets/img/aleatoria.png" alt="">
+
+  <ion-button shape="round">Subir</ion-button>
 
 </ion-content>
 
