--- a/src/app/seleccionar/seleccionar.page.scss
+++ b/src/app/seleccionar/seleccionar.page.scss
@@ -8,3 +8,6 @@
   border-radius: 50px;
   padding: 10px 20px;
 }
+.background-image{
+  --background: url(../../assets/img/seleccionar-bg.png) 0 0/100% 100% no-repeat;
+}
