--- a/src/app/seleccionar/seleccionar.page.html
+++ b/src/app/seleccionar/seleccionar.page.html
@@ -20,7 +20,8 @@
   <img class="secciones" src="../../assets/img/postres.png" alt="">
   <img class="secciones" src="../../assets/img/aleatoria.png" alt="">
 
-  <ion-button shape="round">Subir</ion-button>
+  <ion-button class="text-center" shape="round">Subir</ion-button>
+  <a href="home"><ion-button class="text-center" shape="round">Volver</ion-button></a>
 
 </ion-content>
 
