--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -77,6 +77,12 @@
   font-weight: 800;
 }
 
+.user-cheems{
+  width: auto;
+  margin: auto;
+  display: block;
+}
+
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
 
