--- a/src/app/comidas-por-tipo/comidas-por-tipo.page.html
+++ b/src/app/comidas-por-tipo/comidas-por-tipo.page.html
@@ -10,4 +10,57 @@
       <ion-title size="large">comidas-por-tipo</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <div class="seccion-user text-center">
+          <img class="user-cheems" src="../../assets/img/user-cheems.png" alt="">
+        <h2 class="tx-azul ">Comidas <br> <span class="tx700">Por Tipo</span></h2>
+        <p class="tx-cafe tx500">Lista de comidas para probar y disfrutar.</p>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <!-- <ion-card-header>
+      <ion-card-title>Card Title</ion-card-title>
+      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+    </ion-card-header> -->
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-thumbnail slot="start">
+            <img alt="Silhouette of mountains" src="../../assets/img/user-cheems.png" />
+          </ion-thumbnail>
+          <ion-label>Item</ion-label>
+          <p>detalle</p>
+        </ion-item>
+
+        <ion-item>
+          <ion-thumbnail slot="start">
+            <img alt="Silhouette of mountains" src="../../assets/img/user-cheems.png" />
+          </ion-thumbnail>
+          <ion-label>Item</ion-label>
+          <p>detalle</p>
+        </ion-item>
+
+        <ion-item>
+          <ion-thumbnail slot="start">
+            <img alt="Silhouette of mountains" src="../../assets/img/user-cheems.png" />
+          </ion-thumbnail>
+          <ion-label>Item</ion-label>
+          <p>detalle</p>
+        </ion-item>
+
+        <ion-item lines="none">
+          <ion-thumbnail slot="start">
+            <img alt="Silhouette of mountains" src="../../assets/img/user-cheems.png" />
+          </ion-thumbnail>
+          <ion-label>Item</ion-label>
+          <p>detalle</p>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+
 </ion-content>
