--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,20 +11,19 @@
     <!-- row -->
     <ion-row class="imagen-principal">
       <ion-col class="ion-padding-top">
-        <img class="ion-padding" src="https://via.placeholder.com/400" alt="">
+        <img class="cheems-bg" src="" alt="">
       </ion-col>
     </ion-row>
     <!-- fin row -->
-
+    <img class="cheems-huaso" src="../../assets/img/cheems-waso.png" alt="">
     <ion-row>
       <ion-col class="ion-text-center">
-        <h1>Bienvenid@</h1>
-        <p>¡Bienvenido a nuestra app de comidas! Aquí podrás descubrir deliciosas opciones de diferentes países para
+        <h1 class="tx-azul tx700">Bienvenid@</h1>
+        <p class="tx-cafe tx500">¡Bienvenido a nuestra app de comidas! Aquí podrás descubrir deliciosas opciones de diferentes países para
           satisfacer tus antojos culinarios. ¡Buen provecho!</p>
-
-        <ion-button shape="round">Iniciar</ion-button>
-        <p>Desarrollo de Apps Móviles - 2023</p>
-
+        <ion-button [routerLink]="['/login']">Iniciar</ion-button>
+        <hr>
+        <p class="tx-verde-osc">Desarrollo de Apps Móviles - 2023</p>
       </ion-col>
     </ion-row>
   </ion-grid>
