--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -10,4 +10,6 @@
       <ion-title size="large">login</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-button [routerLink]="['/seleccionar']">Ingresar</ion-button>
 </ion-content>
