--- a/src/app/comidas-por-pais/comidas-por-pais.page.html
+++ b/src/app/comidas-por-pais/comidas-por-pais.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>comidas-por-pais</ion-title>
+    <ion-title>Comidas por pais</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">comidas-por-pais</ion-title>
+      <ion-title size="large">Comidas por pais</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -18,7 +18,9 @@
           <img class="user-cheems" src="../../assets/img/user-cheems.png" alt="">
         <h2 class="tx-azul ">Comidas <br> <span class="tx700">Por País</span></h2>
         <p class="tx-cafe tx500">Lista de comidas típicas de diferentes países para probar y disfrutar.</p>
+        <ion-button class="redondeado" [routerLink]="['/seleccionar']">Volver</ion-button>
         </div>
+
       </ion-col>
     </ion-row>
   </ion-grid>
