--- a/src/app/seleccionar/seleccionar.page.html
+++ b/src/app/seleccionar/seleccionar.page.html
@@ -15,10 +15,10 @@
   <h2 class="tx-azul tx700">Seleccionar</h2>
   <p class="tx-cafe tx500">¿Te apetece probar algo delicioso? Descubre nuestros platos en la aplicación y elige tu favorito para disfrutar en casa. ¡Buen provecho!</p>
 
-  <img class="secciones" src="../../assets/img/por-pais.png" alt="">
-  <img class="secciones" src="../../assets/img/por-tipo.png" alt="">
-  <img class="secciones" src="../../assets/img/postres.png" alt="">
-  <img class="secciones" src="../../assets/img/aleatoria.png" alt="">
+  <img [routerLink]="['/comidas-por-pais']" class="secciones" src="../../assets/img/por-pais.png" alt="">
+  <img [routerLink]="['/comidas-por-tipo']" class="secciones" src="../../assets/img/por-tipo.png" alt="">
+  <img [routerLink]="['/postres']" class="secciones" src="../../assets/img/postres.png" alt="">
+  <img [routerLink]="['/comidas-aleatorias']" class="secciones" src="../../assets/img/aleatoria.png" alt="">
 
   <ion-button class="text-center" shape="round" >Subir</ion-button>
   <a href="home"><ion-button class="text-center" shape="round" [routerLink]="['/inicio']">Volver</ion-button></a>
