--- a/src/app/comidas-aleatorias/comidas-aleatorias.page.html
+++ b/src/app/comidas-aleatorias/comidas-aleatorias.page.html
@@ -18,7 +18,9 @@
           <img class="user-cheems" src="../../assets/img/user-cheems.png" alt="">
         <h2 class="tx-azul ">Comidas <br> <span class="tx700">Aleatorias</span></h2>
         <p class="tx-cafe tx500">Lista aleatoria para probar y disfrutar.</p>
+        <ion-button class="redondeado" [routerLink]="['/seleccionar']">Volver</ion-button>
         </div>
+
       </ion-col>
     </ion-row>
   </ion-grid>
