--- a/src/app/comidas-por-tipo/comidas-por-tipo.page.html
+++ b/src/app/comidas-por-tipo/comidas-por-tipo.page.html
@@ -7,7 +7,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">comidas-por-tipo</ion-title>
+      <ion-title size="large">Comidas por tipo</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -18,6 +18,7 @@
           <img class="user-cheems" src="../../assets/img/user-cheems.png" alt="">
         <h2 class="tx-azul ">Comidas <br> <span class="tx700">Por Tipo</span></h2>
         <p class="tx-cafe tx500">Lista de comidas para probar y disfrutar.</p>
+        <ion-button class="redondeado" [routerLink]="['/seleccionar']">Volver</ion-button>
         </div>
       </ion-col>
     </ion-row>
