--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,7 +21,7 @@
         <h1 class="tx-azul tx700">Bienvenid@</h1>
         <p class="tx-cafe tx500">¡Bienvenido a nuestra app de comidas! Aquí podrás descubrir deliciosas opciones de diferentes países para
           satisfacer tus antojos culinarios. ¡Buen provecho!</p>
-        <ion-button [routerLink]="['/login']">Iniciar</ion-button>
+        <ion-button class="redondeado" [routerLink]="['/login']">Iniciar</ion-button>
         <hr>
         <p class="tx-verde-osc">Desarrollo de Apps Móviles - 2023</p>
       </ion-col>
