--- a/src/app/comidas-por-pais/comidas-por-pais.page.html
+++ b/src/app/comidas-por-pais/comidas-por-pais.page.html
@@ -19,12 +19,15 @@
         <h2 class="tx-azul ">Comidas <br> <span class="tx700">Por País</span></h2>
         <p class="tx-cafe tx500">Lista de comidas típicas de diferentes países para probar y disfrutar.</p>
         <ion-button class="redondeado" [routerLink]="['/seleccionar']">Volver</ion-button>
+        <ion-item>
+          <ion-label>Ingresa un país <ion-text color="danger">*</ion-text></ion-label>
+          <ion-input required></ion-input>
+        </ion-item>
         </div>
 
       </ion-col>
     </ion-row>
   </ion-grid>
-
   <!-- <ion-card-header>
       <ion-card-title>Card Title</ion-card-title>
       <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
@@ -33,7 +36,7 @@
       <ion-list>
         <ion-item>
           <ion-thumbnail slot="start">
-            <img alt="Silhouette of mountains" src="../../assets/img/user-cheems.png" />
+            <img alt="texto ejemplo" src="../../assets/img/user-cheems.png" />
           </ion-thumbnail>
           <ion-label>Item</ion-label>
           <p>detalle</p>
@@ -41,7 +44,7 @@
 
         <ion-item>
           <ion-thumbnail slot="start">
-            <img alt="Silhouette of mountains" src="../../assets/img/user-cheems.png" />
+            <img alt="texto ejemplo" src="../../assets/img/user-cheems.png" />
           </ion-thumbnail>
           <ion-label>Item</ion-label>
           <p>detalle</p>
@@ -49,7 +52,7 @@
 
         <ion-item>
           <ion-thumbnail slot="start">
-            <img alt="Silhouette of mountains" src="../../assets/img/user-cheems.png" />
+            <img alt="texto ejemplo" src="../../assets/img/user-cheems.png" />
           </ion-thumbnail>
           <ion-label>Item</ion-label>
           <p>detalle</p>
@@ -57,7 +60,7 @@
 
         <ion-item lines="none">
           <ion-thumbnail slot="start">
-            <img alt="Silhouette of mountains" src="../../assets/img/user-cheems.png" />
+            <img alt="texto ejemplo" src="../../assets/img/user-cheems.png" />
           </ion-thumbnail>
           <ion-label>Item</ion-label>
           <p>detalle</p>
