--- a/src/app/comidas-por-tipo/comidas-por-tipo.page.html
+++ b/src/app/comidas-por-tipo/comidas-por-tipo.page.html
@@ -19,6 +19,10 @@
         <h2 class="tx-azul ">Comidas <br> <span class="tx700">Por Tipo</span></h2>
         <p class="tx-cafe tx500">Lista de comidas para probar y disfrutar.</p>
         <ion-button class="redondeado" [routerLink]="['/seleccionar']">Volver</ion-button>
+        <ion-item>
+          <ion-label>Ingresa un término <ion-text color="danger">*</ion-text></ion-label>
+          <ion-input required></ion-input>
+        </ion-item>
         </div>
       </ion-col>
     </ion-row>
