--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,15 +1,36 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <!-- <ion-navbar>
     <ion-title>login</ion-title>
-  </ion-toolbar>
+  </ion-navbar> -->
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content padding>
 
-  <ion-button [routerLink]="['/seleccionar']">Ingresar</ion-button>
+
+  <ion-card center>
+    <ion-card-header>
+      <b>Ingreso de Usuarios</b>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-label fixed>Usuario:</ion-label>
+          <ion-input type="text"></ion-input>
+          <!-- <ion-input type="text"[(ngModel)]="user"></ion-input> -->
+        </ion-item>
+        <ion-item>
+          <ion-label fixed>Password:</ion-label>
+          <ion-input type="password"></ion-input>
+          <!-- <ion-input type="password"[(ngModel)]="pass"></ion-input> -->
+        </ion-item>
+      </ion-list>
+      <div padding>
+        <ion-button class="redondeado" [routerLink]="['/seleccionar']">Ingresar</ion-button>
+        <!-- <button ion-button block (click)="Signup()">Sign up</button> -->
+      </div>
+    </ion-card-content>
+  </ion-card>
+  <div class="boton-centrado">
+    <ion-button class="redondeado center" [routerLink]="['/inicio']">regresar</ion-button>
+  </div>
 </ion-content>
