--- a/src/app/comidas-aleatorias/comidas-aleatorias.page.html
+++ b/src/app/comidas-aleatorias/comidas-aleatorias.page.html
@@ -1,14 +1,47 @@
-<ion-content>
+<ion-header >
+  <ion-toolbar>
+    <ion-title>Receta Aleatoria</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content >
   <ion-card *ngIf="randomMeal">
+    <img src="{{ randomMeal.strMealThumb }}" alt="{{ randomMeal.strMealThumb }}">
     <ion-card-header>
-      {{ randomMeal.strMeal }}
+      <ion-card-subtitle>Área: {{ randomMeal.strArea }}</ion-card-subtitle>
+      <ion-card-title>{{ randomMeal.strMeal }}</ion-card-title>
     </ion-card-header>
+
     <ion-card-content>
-      <img src="{{ randomMeal.strMealThumb }}" alt="{{ randomMeal.strstrMealThumb }}">
-      <p>Nombre del plato:</p>
-      {{ randomMeal.strInstructions }}
-      <p>área del plato -  localidad: {{ randomMeal.strArea }}</p>
-      <p>categoría: </p>
+      <h3>Ingredientes:</h3>
+      <ul>
+        <li>{{ randomMeal.strIngredient1 }} | ({{ randomMeal.strMeasure1 }})</li>
+        <li>{{ randomMeal.strIngredient2 }} | ({{randomMeal.strMeasure2}})</li>
+        <li>{{ randomMeal.strIngredient3 }} | ({{randomMeal.strMeasure3}})</li>
+        <li>{{ randomMeal.strIngredient4 }} | ({{randomMeal.strMeasure4}})</li>
+        <li>{{ randomMeal.strIngredient5 }} | ({{randomMeal.strMeasure5}})</li>
+        <li>{{ randomMeal.strIngredient6 }} | ({{randomMeal.strMeasure6}})</li>
+        <li>{{ randomMeal.strIngredient7 }} | ({{randomMeal.strMeasure7}})</li>
+        <li>{{ randomMeal.strIngredient8 }} | ({{randomMeal.strMeasure8}})</li>
+        <li>{{ randomMeal.strIngredient9 }} | ({{randomMeal.strMeasure9}})</li>
+        <li>{{ randomMeal.strIngredient10 }} | ({{ randomMeal.strMeasure10}})</li>
+        <li>{{ randomMeal.strIngredient11}} | ({{ randomMeal.strMeasure11}})</li>
+        <li>{{ randomMeal.strIngredient12 }} | ({{ randomMeal.strMeasure12}})</li>
+        <li>{{ randomMeal.strIngredient13 }} | ({{ randomMeal.strMeasure13}})</li>
+        <li>{{ randomMeal.strIngredient14 }} | ({{ randomMeal.strMeasure14}})</li>
+        <li>{{ randomMeal.strIngredient15 }} | ({{ randomMeal.strMeasure15}})</li>
+      </ul>
+
+      <h3>Pasos:</h3>
+      <ol>
+        <li>
+          {{ randomMeal.strInstructions }}
+        </li>
+      </ol>
+
+      <h3>Más información</h3>
+      <button class="btn btn-primary"><a target="_blank" href="{{randomMeal.strSource}}">{{randomMeal.strIngredient1}}</a></button>
+
     </ion-card-content>
   </ion-card>
 </ion-content>
