--- a/src/app/comidas-por-tipo/comidas-por-tipo.page.html
+++ b/src/app/comidas-por-tipo/comidas-por-tipo.page.html
@@ -35,10 +35,10 @@
         <ion-thumbnail slot="start">
           <img alt="{{ cat.strCategoryThumb }}" src="{{ cat.strCategoryThumb }}" />
         </ion-thumbnail>
-        <ion-label>{{ cat.strCategory }}</ion-label>
+        <ion-label>{{ cat.nombre }}</ion-label>
       </ion-item>
       <div class="ion-padding" slot="content">
-        <p>Descripción: <i>{{ cat.strCategoryDescription }}</i></p>
+        <p>Fecha Creación: <i>{{ cat.fecha_creacion }}</i></p>
       </div>
     </ion-accordion>
     <!-- <ion-accordion value="second">
