--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -28,8 +28,15 @@
         <ion-button class="redondeado" [routerLink]="['/seleccionar']">Iniciar</ion-button>
         <!-- <button ion-button block (click)="Signup()">Sign up</button> -->
       </div>
+      <hr>
+      <div class="usuarios-activos">
+        <h5>Usuarios activos:</h5>
+        <p *ngFor="let user of usuario"><ion-icon name="radio-button-on-outline" class="naranjo"></ion-icon> {{user.nombre}}</p>
+      </div>
     </ion-card-content>
   </ion-card>
+
+  
   <div class="boton-centrado">
     <ion-button class="redondeado center" [routerLink]="['/home']">regresar</ion-button>
   </div>
