--- a/src/app/seleccionar/seleccionar.page.html
+++ b/src/app/seleccionar/seleccionar.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
     <ion-toolbar>
-      <ion-title>seleccionar</ion-title>
+      <ion-title>Seleccione su categoría :D</ion-title>
     </ion-toolbar>
   </ion-header>
   
@@ -12,7 +12,7 @@
     </ion-header>
   
     <img class="user-cheems" src="../../assets/img/user-cheems.png" alt="">
-    <h2 class="tx-azul tx700">Seleccionar</h2>
+    <h2 class="tx-azul tx700">Seleccione su categoría :D</h2>
     <p class="tx-cafe tx500">¿Te apetece probar algo delicioso? Descubre nuestros platos en la aplicación y elige tu favorito para disfrutar en casa. ¡Buen provecho!</p>
   
     <img [routerLink]="['/comidas-por-pais']" class="secciones" src="../../assets/img/por-pais.png" alt="">
